@@ -3,6 +3,13 @@ Math.randomInt = function (min, max) {
 	return Math.floor( Math.random() * (max - min) + min );
 }
 
+Math.clamp = function (value, min, max) {
+	if (value < min) return min;
+	if (value > max) return max;
+
+	return value;
+}
+
 let rgbFromString = function(str) {
 	if (str.substring(0, 3) == "rgb") {
 		return rgbfsRGB(str);
